Sculpt: issues with new menu operators #105557

Closed
opened 2023-03-08 08:12:48 +01:00 by Sun Kim · 8 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.2.2.230217

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-08 01:06, hash: 809a336a3d67
Worked: n/a

Operators were added to the menu with da65b21e2e

Short description of error
Exact steps for others to reproduce the error
With da65b21e2e some of the sculpt tools are added as operators under Sculpt menu at the header. I tried the operators and found these issues.

  • Rotate and Scale operators show shortcuts (R and S) that are not used for the operators in Sculpt mode. Move operator should not show drag-LeftMouse as a shortcut too imo.
  • Lasso Add executes Lasso with Difference mode instead of Join mode
  • Fair Positions and Fair Tangency do not execute as menu operators
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.2.2.230217 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-08 01:06, hash: `809a336a3d67` Worked: n/a Operators were added to the menu with da65b21e2e **Short description of error** **Exact steps for others to reproduce the error** With da65b21e2e some of the sculpt tools are added as operators under `Sculpt` menu at the header. I tried the operators and found these issues. - Rotate and Scale operators show shortcuts (`R` and `S`) that are not used for the operators in Sculpt mode. Move operator should not show `drag-LeftMouse` as a shortcut too imo. - Lasso Add executes Lasso with Difference mode instead of Join mode - Fair Positions and Fair Tangency do not execute as menu operators
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-08 08:12:49 +01:00
Author
Contributor

Edited out visibility related issue. This seems like a different issue and related operators were not part of the patch.

Edited out visibility related issue. This seems like a different issue and related operators were not part of the patch.
Iliya Katushenock added the
Interest
Sculpt, Paint & Texture
Interest
User Interface
labels 2023-03-08 09:34:31 +01:00
Member

Hi, thanks for the report. I can confirm this to some extent.

Lasso Add executes Lasso with Difference mode instead of Join mode

Unable to reproduce this as said. Instead difference mode itself is not working for both box/lasso method (selecting box/lasso trim from toolbar also result triggers this issue). Maybe a separate report is needed for it? (I'll verify the culprit and will open a new ticket if needed)

Hi, thanks for the report. I can confirm this to some extent. > Lasso Add executes Lasso with Difference mode instead of Join mode Unable to reproduce this as said. Instead `difference` mode itself is not working for both box/lasso method (selecting box/lasso trim from toolbar also result triggers this issue). Maybe a separate report is needed for it? (I'll verify the culprit and will open a new ticket if needed)
Member
cc @Tarek-Yasser cc @JosephEagar
Contributor

I think I already encountered and reported the box/lasso trim/add misbehavior in in a comment on #104718.

IIRC, most of my changes regarding this operator were UI related (Python code mainly) so I wasn't sure if I should go down the rabbit hole of debugging it. Anyway, I'll try investigating/fixing stuff I no one is already working on it.

I think I already encountered and reported the box/lasso trim/add misbehavior in [in a comment on #104718](https://projects.blender.org/blender/blender/pulls/104718#issuecomment-883218). IIRC, most of my changes regarding this operator were UI related (Python code mainly) so I wasn't sure if I should go down the rabbit hole of debugging it. Anyway, I'll try investigating/fixing stuff I no one is already working on it.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-10 00:44:30 +01:00
Member

I wasn't able to fix the incorrect hotkeys.

I wasn't able to fix the incorrect hotkeys.
Author
Contributor

I wasn't able to fix the incorrect hotkeys.

@PratikPB2123
@JosephEagar

Should I open a new issue for this? In my opinion, even if they are not feasible to fix right now, it should be listed as a known issue on this board at least.

> I wasn't able to fix the incorrect hotkeys. @PratikPB2123 @JosephEagar Should I open a new issue for this? In my opinion, even if they are not feasible to fix right now, it should be listed as a known issue on this board at least.
Contributor

Should I open a new issue for this? In my opinion, even if they are not feasible to fix right now, it should be listed as a known issue on this board at least.

Definitely agree. it's better to know it exists than discover it again later on.

>Should I open a new issue for this? In my opinion, even if they are not feasible to fix right now, it should be listed as a known issue on this board at least. Definitely agree. it's better to know it exists than discover it again later on.
Author
Contributor

I wasn't able to fix the incorrect hotkeys.

@PratikPB2123
@JosephEagar

Should I open a new issue for this? In my opinion, even if they are not feasible to fix right now, it should be listed as a known issue on this board at least.

I went ahead and posted one. #105831

> > I wasn't able to fix the incorrect hotkeys. > > @PratikPB2123 > @JosephEagar > > Should I open a new issue for this? In my opinion, even if they are not feasible to fix right now, it should be listed as a known issue on this board at least. I went ahead and posted one. #105831
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105557
No description provided.