Sculpt: Fix #105557 Bugs in new sculpt menu entries

Note: the wrong hotkeys are still displayed for
move/rotate/scale, for some reason the base view3d
keymap values are being used.