source/blender/editors/sculpt_paint/sculpt_face_set.cc
@@ -1473,7 +1473,7 @@ void SCULPT_OT_face_sets_edit(struct wmOperatorType *ot)
   ot->invoke = sculpt_face_set_edit_invoke;
   ot->poll = SCULPT_mode_poll;
 
-  ot->flag = OPTYPE_REGISTER | OPTYPE_UNDO;
+  ot->flag = OPTYPE_REGISTER | OPTYPE_UNDO | OPTYPE_DEPENDS_ON_CURSOR;
 
   RNA_def_enum(
       ot->srna, "mode", prop_sculpt_face_sets_edit_types, SCULPT_FACE_SET_EDIT_GROW, "Mode", "");
